cabal-version:      3.0
name:               Casanova

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis: A somewhat stupid but mildly capable computer algrebra system

description: Casanova is a computer algebra system for Haskell.  The main goals
             are good documentation, easy verification, readable source code,
             and general mild capability, but the maximum degree of cleverness
             is /not/ the goal here.  If you want cleverness, then you might
             like Maxima.

license:            Unlicense
license-file:       LICENSE
author:             andrewchawk
maintainer:         xmpp:ach@jabb3r.org
category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Casanova
    build-depends:    base ^>=4.18.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite Casanova-test
    -- Import common warning flags.
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.0,
        Casanova
